fixed different attack score calculation, missing members were beng counted

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1040,6 +1040,7 @@ textarea {
       padding: 2em;
       border: none;
       margin: 0;
+      outline: none;
 
       img {
         position: absolute;
