--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -683,16 +683,14 @@ textarea {
     }
 
     // hourglass (timeclock) on a card
-    .card .hourglass {
+    .hourglass {
+      display: inline-block;
       img {
-        width: 2em;
+        height: 1.5em;
+        padding-right: 0.25em;
       }
 
       .history {
-        display: none;
-        position: absolute;
-        left: 100%;
-        top: 0;
         width: 24em;
         background-color: rgba(22, 22, 22, 0.4);
       }
@@ -995,6 +993,7 @@ textarea {
         height: 100%;
         width: 100%;
         border-left: 0.2em solid #6c70a0;
+        pointer-events: none;
       }
     }
 
@@ -1603,6 +1602,7 @@ textarea {
           min-width: 20em;
           margin-top: 0.375em;
           margin-bottom: 0.375em;
+          max-width: 26em;
         }
       }
       textarea {
@@ -3104,7 +3104,7 @@ textarea {
       font-size: 1.5em;
       cursor: pointer;
       top: -0.45em;
-      left: -0.5em;
+      left: 1em;
 
       img {
         width: 100%;
@@ -3370,6 +3370,79 @@ textarea {
       padding: 0;
       background-color: rgba(0.2, 0.2, 0.2, 0.55);
     }
+
+    // play/pause button for the timeclock next to the top priority in each card
+    .metric {
+      position: absolute;
+      top: 0.25em;
+      left: 0;
+      cursor: pointer;
+
+      img {
+        height: 1.5em;
+      }
+    }
+
+    // Shows the task you are doing right now at the top center of the screen
+    #doing {
+      position: fixed;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+
+      .countupClock {
+        display: inline-block;
+        font-family: 'Arial Black';
+        font-size: 1.1em;
+        margin-left: 0.75em;
+        cursor: default;
+        animation: rainbow 0.6283194s linear 0s infinite;
+      }
+
+      .metric {
+        position: relative;
+        display: inline-block;
+      }
+
+      .priority {
+        display: inline-block;
+        width: 25vw;
+        left: unset;
+        position: relative;
+        transform: unset;
+        margin-left: 1em;
+      }
+    }
+
+    // Rainbow animated words, used to say "DO IT!" on the timeclock start/stop button
+    .DOIT {
+      animation: rainbow 0.6283194s linear 0s infinite;
+      font-weight: bold;
+      position: absolute;
+      left: -0.2em;
+      top: -0.3em;
+      font-weight: bold;
+      font-family: 'Arial Black';
+      font-size: 0.9em;
+      line-height: 0.9;
+      user-select: none;
+
+      &.inline {
+        position: relative;
+        display: inline;
+        left: unset;
+        top: unset;
+        font-size: 1.1em;
+      }
+    }
+
+    // #context.padTop {
+    //   margin-top: 4em;
+    // }
+
+    // #context.dontPadTop {
+    //   margin-top: inherit;
+    // }
   }
 }
 
