--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1070,10 +1070,12 @@ textarea {
       }
     }
 
+    // Inbox sidebar button
     #tour-gifts {
-      top: 8em;
+      top: 9.5em;
     }
 
+    // Members sidebar button
     #tour-members {
       top: calc(45vh - 9em);
     }
@@ -1607,7 +1609,7 @@ textarea {
           min-width: 20em;
           margin-top: 0.375em;
           margin-bottom: 0.375em;
-          max-width: 26em;
+          max-width: 75%;
         }
       }
       textarea {
@@ -3441,13 +3443,29 @@ textarea {
       }
     }
 
-    // #context.padTop {
-    //   margin-top: 4em;
-    // }
+    // Animation for motivational phrases
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+      }
+    }
 
-    // #context.dontPadTop {
-    //   margin-top: inherit;
-    // }
+    // Giant green motivational text
+    #motivational {
+      position: fixed;
+      font-size: 13vw;
+      color: rgba(30, 127, 30, 0.2);
+      opacity: 1;
+      animation: fadeIn 10s infinite alternate;
+      font-family: 'Comic Sans MS';
+      top: 46vh;
+      transform: translateX(-50%) translateY(-50%);
+      left: 50%;
+      text-align: center;
+      pointer-events: none;
+      z-index: 11;
+      font-weight: bold;
+    }
   }
 }
 
