--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -77,7 +77,7 @@ body {
 // full- and face-style card
 .card.full,
 .card.face {
-  min-height: 6em;
+  min-height: 12em;
   max-width: 98vw;
 
   @media only screen and (min-width: 600px) {
@@ -126,6 +126,13 @@ body {
 .card.full .card.priority,
 .card.full .card.face {
   box-shadow: -7px 7px 14px 1px rgba(21, 21, 21, 0.5);
+}
+
+.card.full .content,
+.card.face .content {
+  margin-top: 1.5em;
+  margin-bottom: 0;
+  min-height: 3em;
 }
 
 // upper half of the card hud on a full- or face-style card
@@ -373,9 +380,9 @@ body {
     position: absolute;
     margin: 0;
     max-height: 100%;
+    width: 100%;
     top: 50%;
     transform: translateY(-50%);
-    width: 100%;
 
     h1 {
       font-size: 1.1em;
@@ -1606,9 +1613,12 @@ body {
       margin-top: 0;
       margin-bottom: 0;
       box-shadow: -7px -7px 7px 1px rgba(21, 21, 21, 0.5);
+      min-height: 1.5em;
       max-height: 3em;
       overflow: hidden;
       cursor: pointer;
+      padding-top: 1em;
+      padding-bottom: 1.25em;
 
       .unread {
         position: absolute;
@@ -1689,7 +1699,7 @@ body {
   display: block;
   width: -moz-fit-content;
   width: fit-content;
-  color: white;
+  // color: white;
   margin: 0 auto;
   user-select: none;
   outline: none;
@@ -2090,10 +2100,10 @@ img.icon {
 
 // member online/offline status icon
 .memberIcon {
-  height: 1.75em;
+  height: 1.5em;
   display: inline-block;
   position: relative;
-  margin-right: 0.4em;
+  margin-right: 0.5em;
   top: 0.4em;
 }
 
@@ -2101,7 +2111,7 @@ img.icon {
 .full .memberIcon {
   height: 2em;
   top: 0.35em;
-  margin-right: 0.25em;
+  margin-right: 0.5em;
 }
 
 // member icon on a priority or context
@@ -2626,7 +2636,7 @@ pre {
 // card content
 .content {
   position: relative;
-  margin: 1em auto;
+  margin: 0 auto;
   max-width: 28em;
 
   a {
@@ -3486,6 +3496,10 @@ input[type='text'].error {
 button,
 textarea {
   margin: 0.5em;
+}
+
+.dropZone.priorities {
+  min-height: 1.5em;
 }
 
 // Future Update: procedurally map through the css/themes folder and map all filenames found there into an array
