--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -3413,7 +3413,7 @@ input[type='text'].error {
 
   div {
     height: 100%;
-    color: rgba(0, 255, 255, 0.3);
+    background-color: rgba(0, 255, 255, 0.3);
   }
 }
 
