--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -432,7 +432,6 @@ body {
 
 .card.mini > .hud {
   position: relative;
-  pointer-events: none;
 
   &.mini.before {
     & > .mission,
@@ -443,12 +442,12 @@ body {
       font-size: 0.75em;
       padding: 0.25em;
       margin: 0;
+      pointer-events: none;
     }
 
     & > .countdown,
     & > .mission {
       float: left;
-      pointer-events: none;
     }
 
     & > .mission {
@@ -470,13 +469,12 @@ body {
 
     & > .checkbox {
       float: right;
-      height: 0.75em;
-      width: 0.75em;
-      opacity: 0.75;
       display: inline;
-      pointer-events: none;
+      width: 1.5em;
+      height: 1.5em;
       padding-top: 0.175em;
       padding-right: 0.15em;
+      cursor: pointer;
     }
 
     & > .tally {
@@ -503,14 +501,13 @@ body {
 
     & > .preview {
       position: absolute;
-      right: 1.2em;
+      right: 2.1em;
       bottom: 0;
-      font-size: 0.75em;
+      font-size: 1em;
       padding: 0.25em;
       // pointer-events: none;
       margin: 0;
       background-color: rgba(0, 0, 0, 0.2);
-      cursor: default;
 
       & .nopad {
         padding-left: 0;
@@ -522,8 +519,8 @@ body {
       position: absolute;
       right: 0;
       bottom: 0;
-      font-size: 0.9em;
-      padding: 0.5em 0.5em 0.185em 0.5em;
+      font-size: 1.15em;
+      padding: 0.5em 0.25em 0.15em 0.5em;
     }
   }
 }
@@ -596,17 +593,20 @@ body {
   .cardMenuButton {
     pointer-events: auto;
   }
-
-  .checkbox.unchecked {
-    opacity: 0;
-  }
 }
 
-// show checkbox on hover on a guild card
-.card.badge:hover {
+// hide unchecked checkbox on guild and mini card
+.card.badge > .hud .checkbox.unchecked,
+.card.mini > .hud .checkbox.unchecked {
+  opacity: 0;
+}
+
+// show checkbox on hover on a guild or mini card
+.card.badge:hover,
+.card.mini:hover {
   & > .hud {
     .checkbox.unchecked {
-      opacity: 1;
+      opacity: 0.75;
       transition-property: opacity;
       transition-delay: 0.35s;
       transition-duration: 0.25s;
@@ -650,10 +650,10 @@ body {
 
 // checkbox on a card
 .card .checkbox {
-  height: 1.5em;
-  width: 1.5em;
+  height: 2.25em;
+  width: 2.25em;
   cursor: pointer;
-  opacity: 0.5;
+  opacity: 0.75;
   user-select: none;
 }
 
@@ -1721,8 +1721,13 @@ body {
 .gridMenuButton {
   color: black;
   position: absolute;
-  left: 100%;
-  top: 0;
+  left: calc(100% - 0.3em);
+  top: 100%;
+  margin-top: 0.21em;
+
+  button {
+    padding: 0 0.55em;
+  }
 }
 
 // the content of the grid menu itself
