--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -487,6 +487,8 @@ body {
     right: 0;
     bottom: 0;
     pointer-events: auto;
+    height: 100%;
+    width: 100%;
 
     .countdown {
       position: absolute;
@@ -509,9 +511,14 @@ body {
       margin: 0;
       background-color: rgba(0, 0, 0, 0.2);
 
-      & .nopad {
-        padding-left: 0;
-        padding-right: 0;
+      &.clickable {
+        cursor: pointer;
+      }
+
+      &.showingPriors {
+        color: red;
+        font-weight: bold;
+        text-shadow: -0.1em 0.1em 0.2em rgba(0.05, 0.05, 0.05, 0.5);
       }
     }
 
@@ -561,7 +568,7 @@ body {
   top: 0;
   pointer-events: none;
 
-  & > .preview.nopad {
+  & > .preview.clickable {
     width: 100%;
     height: 100%;
     padding: 0;
@@ -3635,6 +3642,16 @@ textarea {
 .card.full .content.padBefore,
 .card.face .content.padBefore {
   margin-top: 3em;
+}
+
+// Click a priority preview count on a mini card to show the first priority on every grid card that has a priority
+// It displays centered on top of the other card
+.card.mini .hud.after .dragZone {
+  position: absolute;
+  top: 1.5em;
+  left: 0;
+  right: 0;
+  bottom: 1.7em;
 }
 
 // Future Update: procedurally map through the css/themes folder and map all filenames found there into an array
