--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -3652,6 +3652,7 @@ textarea {
   left: 0.25em;
   right: 0.25em;
   bottom: 1.71em;
+  box-shadow: -0.1em 0.1em 0.2em rgba(0, 0, 0, 0.5);
 }
 
 // Make card almost flush with top edge of parent card when no guild title
