fixed drop going to achievements

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -467,6 +467,10 @@ body {
       float: right;
     }
 
+    & > .goal {
+      margin-right: 3em;
+    }
+
     & > .tally {
       margin-left: 0.15em;
     }
