drop non-guild on guild now goes within

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1700,6 +1700,12 @@ body {
         position: absolute;
         left: 0.5em;
       }
+
+      .goal {
+        position: absolute;
+        top: 0.5em;
+        right: 0.5em;
+      }
     }
   }
 }
