--- a/src/css/themes/_florid.scss
+++ b/src/css/themes/_florid.scss
@@ -126,4 +126,9 @@ body.florid {
 	img.memberIcon {
 		opacity: 0.7;
 	}
+
+	// accomplishments font color
+	.completed .content {
+		color: white;
+	}
 }
