updated manual and moved zen-dev to main

--- a/src/css/themes/_dark.scss
+++ b/src/css/themes/_dark.scss
@@ -22,4 +22,9 @@ body.dark {
 	.purple {
 		background-color: #8642a9;
 	}
+
+	// Make tour button text visible
+	.shepherd-element .action {
+		color: white;
+	}
 }
