--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -2456,13 +2456,13 @@ h3 .tipMarker {
     width: fit-content;
     height: -moz-fit-content;
     height: fit-content;
-    // position: absolute;
+    // position: fixed;
 
     .overlay {
       top: 0;
-      position: absolute;
-      width: 8.5em;
-      height: 8.5em;
+      position: fixed;
+      width: 9em;
+      height: 9em;
 
       .label {
         // top: 0;
@@ -2477,6 +2477,7 @@ h3 .tipMarker {
     left: 5em;
     font-size: 1.15em;
     background-color: rgba(255, 10, 10, 0.85);
+    position: fixed;
   }
 }
 
